Fix angular material dependencies. Also change the campus image for the png version, so when the background changes, the white box will not be visible

--- a/RoomOccupancy.API/AngularClient/src/styles.scss
+++ b/RoomOccupancy.API/AngularClient/src/styles.scss
@@ -1,8 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
 
+// angular material default theme and icons
+@import 'https://fonts.googleapis.com/icon?family=Material+Icons';
+@import '~@angular/material/prebuilt-themes/indigo-pink.css'; 
+
 body{
     margin: 0;
     padding: 0; 
-    font-family: 'Open Sans', sans-serif;
-        
+    //font-family: 'Open Sans', sans-serif;
 }
+
+        
+.flex-container {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .flex-container > * {
+    width: 100%;
+  }
